# flipdot-games

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
common/: .gitignore  Cargo.toml
common/src/: display.rs  font_monospace.rs  input.rs  lib.rs  menu.rs  snake.rs  tetris.rs
pico-firmware/: Cargo.toml  README.md  debug_probes.md
pico-firmware/.cargo/: config.toml
pico-firmware/src/: driver.rs  main.rs
pico-hardware/: .gitignore  README.md
pico-hardware/pico-flipdot/: pico-flipdot.kicad_pro  pico-flipdot.kicad_sch
src/: driver.rs  main.rs
